--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       name="KerryCodes"
       content="Website showcasing my projects and about me"
     />
-    <link rel="apple-touch-icon" />
+      <link rel="apple-touch-icon" href="%PUBLIC_URL%/Kerrycodes.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
